--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -10,5 +10,10 @@
     overflow-x: hidden;
     overflow-y: scroll;
     }
+
+    .seperator {
+        width: 100%;
+        height: 150px;
+    }
   
 }
