--- a/src/app/projects/page.module.scss
+++ b/src/app/projects/page.module.scss
@@ -10,4 +10,9 @@
     box-sizing: content-box; 
         width: 100%;
     }
+
+    .seperator {
+        width: 100%;
+        height: 150px;
+    }
 }
