--- a/src/components/Heading/style.module.scss
+++ b/src/components/Heading/style.module.scss
@@ -4,7 +4,7 @@
     position: fixed;
     right: 50px;
     top: 50px;
-    z-index: 1000;
+    z-index: 999;
     @include md {
         top: 25px;
         right: 15px;
